--- a/package.json
+++ b/package.json
@@ -15,12 +15,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0"
-  },
-  "browserslist": [
-    "last 1 version",
-    "> 1%",
-    "maintained node versions",
-    "not dead"
-  ]
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.62.1"
+  }
 }
